<resources>
    <string name="app_name">Progress</string>
    <string name="add">Add</string>

    <string name="default_progress_value">55</string>
    <string name="background_slider_contentdescription">Background image for the slider</string>
    <string name="divider_contentdescription">Divider image</string>
    <string name="add_message_button_description">Voeg informatie toe aan je voortuitgang</string>

    <string name="add_datapoint_button">+</string>

    <string name="add_message_dialog_title">Toelichting</string>
    <string name="add_message_confirm">Voeg toe</string>
    <string name="add_message_dismiss">Annuleer</string>
    <string name="add_message_message_hint">Hoe voel jij je op dit moment?</string>
    <string name="appbar_settings_title">Instellingen</string>

    <string name="goal1_label">7 Minutes workout uitgevoerd</string>
    <string name="goal2_label">Gerend</string>
    <string name="goal3_label">Weekelijkse workout uitgevoerd</string>
    <string name="delete_all_progress_menu__title">Delete all progress</string>
    <string name="add_random_data_menu_item">Add random data</string>
</resources>
