<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/horizontal_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/progressLayout">

        <ImageView
            android:id="@+id/scaleBackgroundImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/background_slider_contentdescription"
            android:src="@drawable/scale"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dividerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sadImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:tint="@color/design_default_color_secondary"
            app:layout_constraintBottom_toBottomOf="@+id/progressIndicatorSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scaleBackgroundImage"
            app:layout_constraintVertical_bias="0.55"
            app:srcCompat="@drawable/ic_sentiment_very_dissatisfied_black_24dp" />

        <ImageView
            android:id="@+id/happyImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:tint="@color/design_default_color_secondary"
            app:layout_constraintBottom_toBottomOf="@+id/scaleBackgroundImage"
            app:layout_constraintEnd_toEndOf="@+id/progressIndicatorSeekBar"
            app:layout_constraintTop_toTopOf="@+id/progressIndicatorSeekBar"
            app:layout_constraintVertical_bias="0.45"
            app:srcCompat="@drawable/ic_mood_black_24dp" />

        <SeekBar
            android:id="@+id/progressIndicatorSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:progress="55"
            android:thumbTint="?attr/colorPrimary"
            android:progressTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/scaleBackgroundImage"
            app:layout_constraintEnd_toEndOf="@+id/dividerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scaleBackgroundImage" />

        <ImageView
            android:id="@+id/progressIndicatorExtendedTick"
            android:layout_width="16dp"
            android:layout_height="1dp"
            android:tint="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/progressIndicatorSeekBar"
            app:layout_constraintEnd_toEndOf="@id/scaleBackgroundImage"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@id/scaleBackgroundImage" />

        <ImageView
            android:id="@+id/progressIndicatorFlyoutTick"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_location_on_black_24dp"
            android:tint="?attr/colorPrimary"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@id/progressIndicatorSeekBar"
            app:layout_constraintEnd_toEndOf="@id/progressIndicatorExtendedTick"
            app:layout_constraintStart_toStartOf="@id/progressIndicatorExtendedTick" />

        <TextView
            android:id="@+id/progressIndicatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_progress_value"
            android:textColor="?attr/colorOnPrimary"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/progressIndicatorFlyoutTick"
            app:layout_constraintStart_toStartOf="@+id/progressIndicatorFlyoutTick"
            app:layout_constraintTop_toTopOf="@+id/progressIndicatorFlyoutTick" />

        <ImageView
            android:id="@+id/dividerImage"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="?android:attr/colorPrimary"
            android:contentDescription="@string/divider_contentdescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addDataPointButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addDataPointButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-thin"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/add_datapoint_button"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>